--- a/css/featured.css
+++ b/css/featured.css
@@ -8,55 +8,55 @@ Author: Christian Deleins
 
 
 .featuredpost{
-margin-top:7px;
-margin-bottom:7px;
-padding:2px;
-height:auto;
-/*color: #323636;
-//background:#00b5cb;
-
-//padding: .5em 1em .55em;*/
--webkit-border-radius: .5em;
--moz-border-radius: .5em;
-border-radius: .5em;
--webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
--moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-box-shadow: 0 1px 2px rgba(0,0,0,.2);	
-/*border: 2px solid #019aac;*/
-
-color: #606060;
+	margin-top:7px;
+	margin-bottom:7px;
+	padding:2px;
+	height:auto;
+	-webkit-border-radius: .5em;
+	-moz-border-radius: .5em;
+	border-radius: .5em;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: 0 1px 2px rgba(0,0,0,.2);	
+	font-family:SegoeUINormal;
+	font-size:11px;
+	color: #606060;
 	border: solid 1px #b7b7b7;
-/*	background: #fff;
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
-	background: -moz-linear-gradient(top,  #fff,  #ededed);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');
-*/
-border: solid 1px #cccccc;
+	border: solid 1px #cccccc;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
 	box-shadow: 0 1px 2px rgba(0,0,0,.2);
 	background: -webkit-gradient(linear, left top, left bottom, from(#eeeeee), to(#cccccc));
 	background: -moz-linear-gradient(top,  #eeeeee,  #cccccc);
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#cccccc');
-	
+		
 
 }
 
 .featuredpost h2{
 margin:0;
 padding:3px;
-/*font-family:Segoe;
-font-size:11px;*/
 font: 14px/100% Segoe;
 text-align:center;
 color: #323636;
+height: 28px;
+overflow: hidden;
+
+
 }
 .featuredpost h2 a{
 color: #323636;	
+font-family:SegoeUINormal;
+
 }
 .featuredpost a{
-text-decoration:none;
+text-decoration: none;
+font-family: SegoeUINormal;
 
+}
+.featured-categories a{
+  text-decoration: none;
+  font-family: SegoeUINormal;
 }
 
 .thumbnail-featured{
@@ -78,35 +78,40 @@ padding-left:2px;
 #featured-excerpt-cdn p{
 color: #323636;
 text-align: justify;
-font-family:Segoe;
+font-family:SegoeUINormal;
 font-size:9px/100%;
 height:140px;
 width:140px;
 
 	
 }
+#featured-excerpt-cdn #featured-categories{
+  height:50px;
+  overflow:hidden;
+}
 
 #featured-excerpt {
 color: #323636;
 text-align: center;
-font-family:Segoe;
+font-family:SegoeUINormal;
 font-size:10px/100%;
 text-decoration:none;
 }
 #featured-excerpt-cdn {
 color: #323636;
 text-align: center;
-font-family:Segoe;
+font-family: SegoeUINormal;
 font-size:10px/100%;
 text-decoration:none;
 width:100%;
+
 
 }
 
 #featured-excerpt a{
 color: #323636;
 text-align: justify;
-font-family:Segoe;
+font-family:SegoeUINormal;
 font-size:12px;
 text-decoration:none;
 }
@@ -117,7 +122,7 @@ color: white;
 #featured-excerpt p{
 color: #323636;
 text-align: justify;
-font-family:Segoe;
+font-family:SegoeUINormal;
 font-size:9px/100%;
 
 }
@@ -125,7 +130,7 @@ font-size:9px/100%;
 #featured-excerpt-cdn a{
 color: #323636;
 text-align: center;
-font-family:Segoe;
+font-family:SegoeUINormal;
 font-size:12px;
 text-decoration:none;
 }
@@ -155,7 +160,6 @@ margin:1px;
 }
 #indexFeaturedSingle{
 width: 160px; /* since this element is floated, a width must be given */
-height: 220px;
 font-family:Verdana, Geneva, sans-serif;
 font-size:8px;
 text-decoration: none;
@@ -186,6 +190,3 @@ margin-top:5px;
 padding:0px;
 }
 
-#featured-categories {
-height:20px;
-}
